# 23202-chernykh-oop-cpp

./: .gitignore  README.md
task-0/: CMakeLists.txt
task-0/Google_tests/: CMakeLists.txt
task-0/Google_tests/Converter/: ConverterTest.cpp
task-0/Google_tests/FileReader/: FileReaderTest.cpp
task-0/Google_tests/FileWriter/: FileWriterTest.cpp
task-0/Google_tests/Parser/: ParserTest.cpp
task-0/Google_tests/Statistics/: StatisticsTest.cpp
task-0/include/: FileWriter.h
task-0/src/: FileReader.cpp  FileWriter.cpp  Parser.cpp  Statistics.cpp  main.cpp
task-0/src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
task-0/src/Converter/: CMakeLists.txt  Converter.cpp  Converter.h
task-0/src/FileReader/: CMakeLists.txt  FileReader.cpp  FileReader.h
task-0/src/FileWriter/: CMakeLists.txt  FileWriter.cpp  FileWriter.h
task-0/src/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
task-0/src/Statistics/: CMakeLists.txt  Statistics.cpp  Statistics.h
task-1/: CMakeLists.txt
task-1/src/: BitArray.cpp  BitArray.h
task-1/test/: BitArrayTest.cpp  CMakeLists.txt
task-2/: CMakeLists.txt
task-2/src/: ArgParser.cpp  ArgParser.h  Controller.cpp  Controller.h  FileReader.cpp  InputListener.cpp  InputListener.h  Model.cpp  Model.h  StringParser.cpp  StringParser.h  Test.cpp  Universe.cpp  Universe.h  UniverseParser.cpp  UniverseParser.h  View.cpp  View.h  main.cpp
task-2/src/ArgParser/: ArgParser.cpp  ArgParser.h
task-2/src/Controller/: Controller.cpp  Controller.h
task-2/src/Controller/CommandListener/: CommandListener.cpp  CommandListener.h  InputListener.h  StringParser.h
task-2/src/OutputHandler/: FileWriter.cpp  FileWriter.h  OutputHandler.cpp  OutputHandler.h  Printer.cpp  Printer.h
task-2/src/Universe/: Universe.cpp  Universe.h  UniverseWrapper.cpp  UniverseWrapper.h
task-2/src/UniverseParser/: FileReader.h  UniverseParser.cpp  UniverseParser.h
task-3/: CMakeLists.txt
task-3/src/: ArgParser.cpp  ArgParser.h  ConfigFileParser.cpp  ConfigFileParser.h  Controller.cpp  Controller.h  Converter.cpp  Converter.h  ConverterWrapper.cpp  ConverterWrapper.h  Sample.cpp  WavFile.cpp  WavFile.h  WavReader.cpp  WavReader.h  main.cpp
task-3/src/ArgParser/: ArgParser.cpp  ArgParser.h
task-3/src/ConfigParser/: ConfigParser.cpp  ConfigParser.h  StringParser.cpp  StringParser.h
task-3/src/Controller/: Controller.cpp  Controller.h
task-3/src/Converter/: Converter.cpp  Converter.h  ConverterFactory.cpp  ConverterFactory.h
task-3/src/ConverterManager/: ConverterManager.cpp  ConverterManager.h
task-3/src/ConverterWrapper/: ConverterWrapper.cpp  ConverterWrapper.h
task-3/src/FileReaders/: BasicFileReader.cpp  BasicFileReader.h  ByteReader.cpp  ByteReader.h  FIleReader.cpp  FileReader.cpp  FileReader.h
task-3/src/Sample/: Sample.h
task-3/src/WavProcessing/: WavFile.cpp  WavFile.h  WavReader.cpp  WavReader.h
task-4/: CMakeLists.txt
task-4/src/: CSVParser.h  StreamParser.cpp  StreamParser.h  TuplePrinter.h  main.cpp
task-4/src/StreamParser/: StreamParser.cpp  StreamParser.h
task-4/test_files/: test.csv  test1.csv  test2.csv
